--- a/3-spatial/style.css
+++ b/3-spatial/style.css
@@ -1,26 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 :root {
     --fontFamily: 'Raleway', sans-serif;
     --fontSize: 16px;
     --accents: #f32853;
     --hover: #f44066;
     --white: #fff;
-    --headings: #484848;/*rgb(72, 72, 72)*/
+    --headings: #484848; /* rgb(72, 72, 72) */
     --text: #666;
     --gray: #aaaaaa;
-    --transition: 0.3 ease;
+    --transition: .3s ease;
     --py: 100px 0;
     --pt: 100px 0 0 0;
-    
 }
-/********************
+/***************
 basic styles
-********************/
+***************/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
 body {
     font-family: var(--fontFamily);
@@ -42,12 +40,12 @@ a:hover {
 button {
     padding: 25px 50px;
     background: var(--accents);
-    color: var(--white);
-    font-size: 1.3rem;
-    text-transform: uppercase;
     border: none;
-    font-weight: 600;
-    border-radius: 8px;
+    font-size: 1.5rem;
+    color: var(--white);
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: 7px;
     letter-spacing: 1px;
     cursor: pointer;
 }
@@ -55,7 +53,7 @@ button:hover {
     background: var(--hover);
 }
 h2 {
-    font-size: 2.8rem;
+    font-size: 3rem;
     text-transform: uppercase;
     line-height: 1.5;
 }
@@ -63,20 +61,20 @@ h2 {
     width: 72%;
     margin: auto;
 }
-/********************
+/***************
 header
-********************/
+***************/
 header {
-    background-image: linear-gradient(rgba(72, 72, 72, .7), rgba(72, 72, 72, .7)), url(img/banner.jpg);
+    background-image: linear-gradient(rgba(72, 72, 72,.9), rgba(72, 72, 72,.9)), url(img/banner.jpg);
     background-position: center top;
     background-size: cover;
+    height: 100vh;
     background-attachment: fixed;
-    height: 100vh; 
 }
 header nav {
     display: flex;
     justify-content: space-between;
-    padding: 70px 70px 0;  
+    padding: 70px 70px 0;
 }
 .logo span {
     font-weight: 700;
@@ -84,33 +82,26 @@ header nav {
 .logo {
     font-size: 1.5rem;
     color: var(--white);
-    
 }
 .logo:hover {
     color: var(--accents);
 }
 header a {
-    
     text-decoration: none;
     text-transform: uppercase;
 }
-header ul li a:hover {
-    opacity: .7;
+header ul li a {
     color: var(--white);
+    opacity: .7;
     margin-left: 70px;
     font-size: 1.2rem;
-
+}
+header ul li a:hover {
+    color: var(--white);
+    opacity: 1;
 }
 header ul {
     display: flex;
-    
-    
-}
-header ul li a {
-    color: var(--white);
-    margin-left: 70px;
-    opacity: .7;
-    font-size: 1.2rem;
 }
 header div {
     display: flex;
@@ -127,15 +118,15 @@ header div h1 {
 }
 header div p {
     color: var(--gray);
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     padding: 50px 0;
 }
-/********************
+/***************
 intro
-********************/
+***************/
 .intro {
     width: 55%;
-    margin:auto;
+    margin: auto;
     padding: var(--py);
     display: flex;
     justify-content: space-between;
@@ -145,22 +136,22 @@ intro
 }
 .intro h4,
 .gallery h4,
-.services h4 {
+.services h4 ,{
     text-transform: uppercase;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color: var(--gray);
     font-weight: 400;
 }
 .intro p {
-    font-size: 1.1;
+    font-size: 1.1rem;
     line-height: 1.8;
 }
 .intro p:first-child {
     padding-bottom: 30px;
 }
-/********************
+/***************
 gallery
-********************/
+***************/
 .gallery {
     padding: var(--py);
     background: #f6f6f6;
@@ -194,38 +185,127 @@ gallery
     text-align: center;
     margin-top: 60px;
 }
-.buttons button {
+.gallery .buttons button {
     margin: 0 10px;
+    padding: 20px 40px;
 }
-.buttons button:last-child {
-    background: var(--headings); 
+.gallery .buttons button:last-child {
+    background: var(--headings);
 }
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/***************
+services
+***************/
+.services {
+    padding: var(--pt);
+    padding-bottom: 20px;
+}
+.services article {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+.services article .col {
+    display: flex;
+    flex: 0 0 47%;
+    align-items: center;
+    margin-bottom: 80px;
+    justify-content: space-between;
+}
+.services article img {
+    width: 100%;
+    border-radius: 50%;
+    border: 8px solid #e3e3e3;
+    display: block;
+}
+.services article img:hover {
+    border: 8px solid var(--accents);
+    transition: var(--transition);
+}
+.services article .col .text {
+    flex: 0 0 66%;
+}
+.services article .col .img {
+    flex: 0 0 27%;
+}
+.services article .col:nth-child(even) .text {
+    order: 2;
+}
+.services article .col:nth-child(even) .img {
+    order: 1;
+}
+.services article .col:nth-child(odd) .text {
+    text-align: right;
+}
+.services .text h3 {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+}
+.services .text h5 {
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: var(--gray);
+    font-weight: 300;
+    padding-bottom: 20px;
+}
+.services .text p {
+    font-size: 1.1rem;
+}
+/***************
+cta
+***************/
+.cta {
+    background-image:linear-gradient(rgba(72, 72, 72,.9), rgba(72, 72, 72,.9)),  url(img/banner.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: var(--py);
+    text-align: center;
+}
+.cta h2 {
+    color: var(--white);
+}
+.cta h4 {
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    color: var(--gray);
+    font-weight: 400;
+    padding: 30px 0;
+}
+/***************
+footer
+***************/
+footer {
+    padding: var(--py);
+    text-align: center;
+    background: #f6f6f6;
+}
+footer i {
+    font-size: 3rem;
+    color: var(--gray);
+    margin: 0 60px 0px 0;
+}
+footer i:hover {
+    color: var(--headings);
+    transition: var(--transition);
+}
+footer ul {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+footer ul li {
+    border-right: 1px solid var(--gray);
+    color: var(--gray);
+    padding: 0 20px;
+}
+footer ul li:last-child {
+    border: none;
+}
+footer ul li a {
+    color: var(--gray);
+    text-decoration: none;
+}
+footer ul li a:hover {
+    color: var(--text);
+}
